[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/breakable.gd" type="Script" id=1]
[ext_resource path="res://tiles/zelda_tileset.png" type="Texture" id=2]
[ext_resource path="res://sounds/cut_bush.smp" type="Sample" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 28.4444, 32, -28.4444, 32, -28.4444, -24.8889, 28.4444, -24.8889 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="SampleLibrary" id=3]

samples/cut_bush = { "db":0.0, "pitch":1.0, "sample":ExtResource( 3 ) }

[node name="Bush" type="StaticBody2D"]

input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )
__meta__ = { "_edit_group_":true }

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
region = true
region_rect = Rect2( 256, 48, 16, 16 )

[node name="CollisionBox" type="KinematicBody2D" parent="Sprite"]

transform/pos = Vector2( 4.76837e-07, -1 )
transform/scale = Vector2( 0.28125, 0.28125 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/CollisionBox"]

build_mode = 0
polygon = Vector2Array( 28.4444, -24.8889, -28.4444, -24.8889, -28.4444, 32, 28.4444, 32 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="HitBox" type="Area2D" parent="."]

transform/pos = Vector2( 0, -0.5 )
transform/scale = Vector2( 0.25, 0.234375 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Particles" type="Particles2D" parent="."]

config/amount = 20
config/lifetime = 0.5
config/emit_timeout = 0.1
config/emitting = false
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 4.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.016861, 0.863281, 0.129276, 1 )

[node name="SoundPlayer" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false


